Fix ready-up UI being too small to support 4 players Fix game crashing when axe dies (and "killed by" menu getting stuck) Update loading screen to reflect name change

--- a/content/dota_addons/duel1v1_updated/panorama/styles/custom_game/ready/ready.css
+++ b/content/dota_addons/duel1v1_updated/panorama/styles/custom_game/ready/ready.css
@@ -2,7 +2,7 @@
 .Root
 {
 	width: 25%;
-	height: 25%;
+	height: 50%;
 
 	horizontal-align: left;
 	vertical-align: center;
@@ -117,7 +117,8 @@
 // Click to ready up
 .ReadyButton
 {
-	margin-top: 25px;
+	horizontal-align: center;
+	vertical-align: center;
 	
 	background-color: grey;
 	width: 150px;
