--- a/content/dota_addons/duel1v1_updated/panorama/styles/custom_game/rematch/rematch.css
+++ b/content/dota_addons/duel1v1_updated/panorama/styles/custom_game/rematch/rematch.css
@@ -121,7 +121,8 @@
 // Click to ready up
 .RematchButton
 {
-	margin-top: 50px;
+	horizontal-align: center;
+	vertical-align: center;
 	
 	background-color: grey;
 	width: 170px;
